# rbsegs

./: CMakeLists.txt  Cargo.toml  README.md
src/: bruteforce.rs  brutelist.rs  event.rs  lib.rs  seg.rs
src/bench/: Cargo.toml
src/bench/src/: main.rs
